<resources>
    <string name="app_name">GaragePlus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="vehicles">Vehicles</string>
    <string name="billing">Billing</string>
    <string name="offers">Offers</string>
    <string name="locate">Locate Garage</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="feedback">Send feedback</string>
    <string name="communicate">Communicate</string>


    <string name="action_settings">Settings</string>
</resources>
