<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vehicles"
            android:icon="@drawable/ic_car_black_24dp"
            android:title="@string/vehicles" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_transactions_black_24dp"
            android:title="@string/billing" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_local_offers_black_24dp"
            android:title="@string/offers" />
        <item
            android:id="@+id/nav_locate"
            android:icon="@drawable/ic_location_searching_black_24dp"
            android:title="@string/locate" />
    </group>

    <item android:title="@string/preferences">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/feedback"/>

        </menu>
    </item>

</menu>
